# Opengl

./: CMakeLists.txt
libraries/glad-master/: CMakeLists.txt
libraries/glfw-3.2.1/src/: CMakeLists.txt
projects/: CMakeLists.txt
projects/include/: CMakelists.txt
projects/src/: Hello_triangle.cpp  Shader_with_class.cpp  Shaders.cpp
